force-app/main/default/objects/Apttus_Config2__ProductTranslation__c/Apttus_Config2__ProductTranslation__c.object-meta.xml
<CustomObject>
    <description>This object holds the translated values of product object fields for all the languages</description>
    <label>Product Translation</label>
    <nameField>
        <label>Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>