force-app/main/default/objects/Apttus_Config2__ProductTranslation__c/fields/Apttus_Config2__Family__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Family__c</fullName>
    <description>Translated product familty</description>
    <inlineHelpText>Translated product familty</inlineHelpText>
    <label>Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>