force-app/main/default/objects/Apttus_Config2__ProductTranslation__c/fields/Apttus_Config2__Language__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Language__c</fullName>
    <description>Language of the translated product record</description>
    <inlineHelpText>Language of the translated product record</inlineHelpText>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>