force-app/main/default/objects/Apttus_Config2__ProductTranslation__c/fields/Apttus_Config2__Name__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Name__c</fullName>
    <description>holds translated product name</description>
    <inlineHelpText>hold translated product name</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>