force-app/main/default/objects/Apttus_Config2__ProductTranslation__c/fields/Apttus_Config2__ProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the product record</description>
    <inlineHelpText>Lookup to the product record</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Translation</relationshipName>
    <type>Lookup</type>
</CustomField>